แก้ไข - ตรง conversation-list เพิ่มเวลาล่าสุดที่มีการ chat -  แก้ไข switch ให้อยู่ตรงกลาง -  แก้ไขการแสดงข้อความให้สวยขึ้น - ทำให้ messages-input-text มีการ disabled - ทำให้ปุ่ม button มีการ disabled

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                             </div>
                             <div class="display-text">
                                 <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
+                                    <div class="name">
+                                        <h5 aria-label="Tonkung">Tonkung</h5>
+                                        <div class="time">24/06/2019 17:22</div>
+                                    </div>
                                 </div>
                                 <div class="text">
                                     ข้อความข้อความข้อความข้อความข้อความ
@@ -44,142 +47,10 @@
                             </div>
                             <div class="display-text">
                                 <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
-                                </div>
-                                <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="display">
-                            <div class="photo">
-                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                            </div>
-                            <div class="display-text">
-                                <div class="display-name">
-                                    <h5 aria-label="Tonkung">Tonkung</h5>
+                                    <div class="name">
+                                        <h5 aria-label="Tonkung">Tonkung</h5>
+                                        <div class="time">24/06/2019 17:22</div>
+                                    </div>
                                 </div>
                                 <div class="text">
                                     ข้อความข้อความข้อความข้อความข้อความ
@@ -193,11 +64,18 @@
             <div class="messages">
                 <div class="messages-type">
                     <div class="messages-switch">
-                        คน
-                        <label class="switch">
+                        <div class="switch-text">
+                            <h5>คน</h5>
+                        </div>
+                        <div class="switch-text">
+                            <label class="switch">
                                 <input type="checkbox">
                                 <span class="slider round"></span>
-                        </label> Bot
+                            </label>
+                        </div>
+                        <div class="switch-text">
+                            <h5>Bot</h5>
+                        </div>
                     </div>
                 </div>
                 <div class="messages-show">
@@ -210,8 +88,7 @@
                                 <h5 aria-label="Tonkung">Tonkung</h5>
                             </div>
                             <div class="text">
-                                ข้อความข้อความข้อความข้อความข้อความ ข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ
-                                <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ
+                                ข้อความข้อความข้อความข้อความข้อความ
                             </div>
                             <div class="text-time">
                                 <h5 aria-label="Tonkung">24/06/2019 17:22</h5>
@@ -220,77 +97,24 @@
                     </div>
                     <div class="message-box-own">
                         <div class="display-text">
-                            <div class="display-name">
+                            <!-- <div class="display-name">
                                 <h5 aria-label="Tonkung">Mamoe</h5>
-                            </div>
+                            </div> -->
                             <div class="text">
-                                ข้อความข้อความข้อความข้อความข้อความ ข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ
-                                <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ
+                                ข้อความข้อความข้อความข้อความข้อความ
                             </div>
                             <div class="text-time">
-                                <h5 aria-label="Tonkung">24/06/2019 17:22</h5>
+                                <h5 aria-label="">24/06/2019 17:22</h5>
                             </div>
                         </div>
-                        <div class="photo-display">
+                        <!-- <div class="photo-display">
                             <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                        </div>
-                    </div>
-                    <div class="message-box-other">
-                        <div class="photo-display">
-                            <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                        </div>
-                        <div class="display-text">
-                            <div class="display-name">
-                                <h5 aria-label="Tonkung">Tonkung</h5>
-                            </div>
-                            <div class="text">
-                                ข้อความข้อความข้อความข้อความข้อความ ข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ
-                                <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ
-                            </div>
-                            <div class="text-time">
-                                <h5 aria-label="Tonkung">24/06/2019 17:22</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="message-box-own">
-                        <div class="display-text">
-                            <div class="display-name">
-                                <h5 aria-label="Tonkung">Mamoe</h5>
-                            </div>
-                            <div class="text">
-                                ข้อความข้อความข้อความข้อความข้อความ ข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ
-                                <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ
-                            </div>
-                            <div class="text-time">
-                                <h5 aria-label="Tonkung">24/06/2019 17:22</h5>
-                            </div>
-                        </div>
-                        <div class="photo-display">
-                            <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                        </div>
-                    </div>
-                    <div class="message-box-own">
-                        <div class="display-text">
-                            <div class="display-name">
-                                <h5 aria-label="Tonkung">Mamoe</h5>
-                            </div>
-                            <div class="text">
-                                ข้อความข้อความข้อความข้อความข้อความ ข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ
-                                <br> ข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความ <br> ข้อความข้อความข้อความข้อความ
-                            </div>
-                            <div class="text-time">
-                                <h5 aria-label="Tonkung">24/06/2019 17:22</h5>
-                            </div>
-                        </div>
-                        <div class="photo-display">
-                            <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="messages-input">
-                    <!-- <input type="text" id="messages-input-text" placeholder="ข้อความ"> -->
-                    <div contenteditable="true" class="messages-input-text">I'm Editable. Edit me!</div>
-                    <input type="button" value="ส่ง" class="button button-green">
+                    <div contenteditable="false" class="messages-input-text">I'm Editable. Edit me!</div>
+                    <input type="button" value="ส่ง" disabled class="button button-green">
                 </div>
             </div>
         </div>
