--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     </div>
                                 </div>
                                 <div class="text">
-                                    ข้อความข้อความข้อความข้อความข้อความ
+                                    ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ
                                 </div>
                             </div>
                         </div>
@@ -88,7 +88,8 @@
                                 <h5 aria-label="Tonkung">Tonkung</h5>
                             </div>
                             <div class="text">
-                                ข้อความข้อความข้อความข้อความข้อความ
+                                ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ<br> ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ
+                                <br> ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ
                             </div>
                             <div class="text-time">
                                 <h5 aria-label="Tonkung">24/06/2019 17:22</h5>
@@ -110,6 +111,24 @@
                         <!-- <div class="photo-display">
                             <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
                         </div> -->
+                    </div>
+                    <div class="message-box-own">
+                        <div class="display-text">
+                            <!-- <div class="display-name">
+                                    <h5 aria-label="Tonkung">Mamoe</h5>
+                                </div> -->
+                            <div class="text">
+                                ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ<br> ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ
+                                <br> ข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความข้อความ
+                                <br>
+                            </div>
+                            <div class="text-time">
+                                <h5 aria-label="">24/06/2019 17:22</h5>
+                            </div>
+                        </div>
+                        <!-- <div class="photo-display">
+                                <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
+                            </div> -->
                     </div>
                 </div>
                 <div class="messages-input">
