แก้ไข - ให้เปลี่ยนสีพื้นหลังข้อความจาก attbuite own

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="messages-show">
-                    <div class="message-box-other">
+                    <div class="message-box">
                         <div class="photo-display">
                             <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
                         </div>
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="message-box-own">
+                    <div class="message-box" own>
                         <div class="display-text">
                             <!-- <div class="display-name">
                                 <h5 aria-label="Tonkung">Mamoe</h5>
@@ -112,7 +112,7 @@
                             <img src="https://via.placeholder.com/50" alt="Tonkung" srcset="">
                         </div> -->
                     </div>
-                    <div class="message-box-own">
+                    <div class="message-box" own>
                         <div class="display-text">
                             <!-- <div class="display-name">
                                     <h5 aria-label="Tonkung">Mamoe</h5>
